@@ -24,6 +24,9 @@ lib/Web/Components/Forms.pm
 lib/Web/Components/Role/TT.pm
 lib/Web/Components/Role/Email.pm
 lib/Web/Components/Role/Forms.pm
+node_modules/
+package-lock.json
+package.json
 t/ipc_srlock*
 t/script.log
 *.tar.gz
