@@ -131,8 +131,13 @@ footer {
         display: inline-block; vertical-align: top;
     }
     .panel {
-        align-items: flex-start; column-gap: 0.5rem; display: flex;
-        justify-content: center;
+        display: grid; gap: 1rem; grid-auto-flow: column;
+        @media (max-width: @lower-break) {
+             grid-auto-flow: unset;
+        }
+    }
+    .panel > div:first-child {
+        grid-row: 1 / 3;
     }
 }
 .centred {
@@ -430,7 +435,7 @@ footer {
     width: @nav-link-text;
 }
 .messages-panel {
-    bottom: 2rem; position: absolute; right: 1rem; z-index: 3;
+    bottom: 2rem; left: 1rem; position: absolute; z-index: 3;
     .message-item {
         background: #colours[message-bg];
         border: 2px solid #colours[message-border]; border-radius: 5px;
